plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.sparkjava:spark-core:2.9.4'
    implementation 'com.google.code.gson:gson:2.9.1'
    implementation 'org.mongodb:mongodb-driver-sync:4.3.2'
    implementation 'com.google.guava:guava:31.0.1-jre'

    runtimeOnly 'org.slf4j:slf4j-simple:2.0.0'
}

processResources {
    from('movies-v2.json.gz')
}

application {
    mainClass.set('movies.Server')
    applicationDefaultJvmArgs = [
        '-Xmx3g',
        '-Xms3g',
        '-javaagent:dd-java-agent.jar',
        '-Ddd.profiling.enabled=true',
        '-XX:FlightRecorderOptions=stackdepth=256',
        '-Ddd.logs.injection=true',
        '-Ddd.trace.sample.rate=1',
        '-Ddd.service=ivoanjo-testing-movies-api-java',
        '-Ddd.env=staging',
        "-Ddd.version=${LocalDateTime.now().withNano(0)}", // Tag each run with a different version
        '-Ddd.profiling.jfr-template-override-file=dd-profiler-overrides.jfp',
    ]}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
